--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,3 +104,5 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/StealthFPS.STLTPlayerCharacter.IASitdown",NewName="/Script/StealthFPS.STLTPlayerCharacter.IASit")
++FunctionRedirects=(OldName="/Script/StealthFPS.Gun.Attach",NewName="/Script/StealthFPS.Gun.SetAttach")
++PropertyRedirects=(OldName="/Script/StealthFPS.Gun.PlayerAnimInstande",NewName="/Script/StealthFPS.Gun.PlayerAnimInstanse")
