--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/PARK/Maps/TestMap1.TestMap1
 EditorStartupMap=/Game/Maps/TestMap.TestMap
+GlobalDefaultGameMode=/Game/Blueprint/GameMode/BP_STLTGameMode.BP_STLTGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
