Takedown ready setting

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/PARK/Maps/TestMap1.TestMap1
 EditorStartupMap=/Game/Maps/TestMap.TestMap
 
 [/Script/Engine.RendererSettings]
