--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,6 +33,7 @@ r.DefaultFeature.Bloom=False
 r.MSAACount=0
 r.ScreenPercentage=25
 r.Upscale.Quality=0
+r.Nanite.ProjectEnabled=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
