--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8A3C793A45FD882865327DA028512F2D
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCookAll=True
+
