--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -111,6 +111,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/StealthFPS.STLTPlayerCharacter.TakedownReady",NewName="/Script/StealthFPS.STLTPlayerCharacter.AmTakedownReady")
 +PropertyRedirects=(OldName="/Script/StealthFPS.STLTPlayerCharacter.Choke",NewName="/Script/StealthFPS.STLTPlayerCharacter.AMChoke")
 +PropertyRedirects=(OldName="/Script/StealthFPS.STLTPlayerCharacter.ChokeFinish",NewName="/Script/StealthFPS.STLTPlayerCharacter.AMChokeFinish")
++FunctionRedirects=(OldName="/Script/StealthFPS.STLTBaseCharacter.TakeDown",NewName="/Script/StealthFPS.STLTBaseCharacter.Takedown")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
